src/tests/unary-operators/4.txt
unary-operators/4.c:4:5: error: invalid operand to logical '!' (have 'float *', need 'int')
     !ff;
     ^
